Convert assertions to exceptions and Deallocate JVMTI memory

--- a/substratevm/native-src/heap-assignment-tracing-agent/CMakeLists.txt
+++ b/substratevm/native-src/heap-assignment-tracing-agent/CMakeLists.txt
@@ -8,7 +8,7 @@ include_directories(${JNI_INCLUDE_DIRS})
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_library(heap-assignment-tracing-agent SHARED main.cpp bytecode.cpp settings.h)
+add_library(heap-assignment-tracing-agent SHARED main.cpp bytecode.cpp settings.h JvmtiWrapper.h)
 
 add_custom_command(
         OUTPUT ${CMAKE_BINARY_DIR}/HeapAssignmentTracingHooks.class
